20071008
	nemo's change to emu/port/random.c; really the file needs a little rewriting for clarity (too many overlapping states)
20071002
	ensure fmtdef.h included by some lib9 functions so that va_copy is defined on older systems that lack that needless notion
	<{} and >{} added to sh(1)
20070929
	move emu/MacOSX/mkfile to .../mkfile-x11 and replace it by the variant that builds for Carbon, now the default
20070927
	add working drawcursor to emu/MacOSX/win.c, based on mirtchovski's changes (but mapping general cursor images to Mac's form)
20070910
	update spki(2) [change handling of hashes, add signature functions] appl/lib/spki/spki.b module/spki.m, updated for GSoC
20070906
	add toreal to string(2)
20070905
	/appl/cmd/ed.b (caerwyn's fix for g/.../d)
	also /appl/lib/ecmascript/builtin.b (toupper fix)
20070902
	make /appl/lib/daytime.b accept Daytime->text's output; add string2tm to man page (issue 59)
20070901
	add andrey's changes to emu/MacOSX/win.c (used by emu/MacOSX/mkfile-a)
	add saoret's changes to dis/lookman, dis/man (issue 58)
	add micah.stetson's change to /appl/cmd/src.b (issue 57)
20070817
	two old changes that weren't in the distribution...
	libkeyring/rsaalg.c: previously failed to ensure the output key was the right length (really rsagen should do that)
	libinterp/alt.c: use a better random number generator
20070814
	bufio.b didn't update the buffer pointers correctly on write errors
20070807
	libinterp/keyring.c don't include owner= if owner is nil or ""
	add auth/rsagen
20070806
	/module/lists.m add PATH(!), also simplify concat implementation
20070725
	/dis/man initialise fils correctly to empty list and remove hack (issue 56)
20070720
	utils/5l/asm.c: ensure SBZ field in MOV is regarded as MBZ (ie, force to zero)
20070714
	add Sys->readn, update sys-read(2)
	copy two repairs from emu/port/inferno.c to os/port/inferno.c
	remove readn implementation from several commands
	print correct diagnostic in appl/cmd/crypt.b